using meinheldwoker for gunicorn

--- a/docs/supervisord.example.conf
+++ b/docs/supervisord.example.conf
@@ -1,6 +1,6 @@
 [program:flask-base]
 user=dz
-command=bash /opt/service/flask-base/run.sh gunicorn --workers 10 run:flask_app --bind 0.0.0.0:19000
+command=bash /opt/service/flask-base/run.sh gunicorn --workers 10 --worker-class=meinheld.gmeinheld.MeinheldWorker --timeout=360 run:flask_app --bind 0.0.0.0:19000
 stopsignal=KILL
 stopwaitsecs=3
 directory=/opt/service/flask-base
