--- a/.editorconfig
+++ b/.editorconfig
@@ -12,11 +12,11 @@ charset = utf-8
 
 # Docstrings and comments use max_line_length = 79
 [*.py]
-max_line_length = 119
-
-# Use 2 spaces for the HTML files
-[*.html]
-indent_size = 2
+max_line_length = 120
+ignore_frosted_errors = E103
+skip = runtests.py,build
+balanced_wrapping = true
+not_skip = __init__.py
 
 # The JSON files contain newlines inconsistently
 [*.json]
