--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ simpleflake = "^0.1.5"
 sentry-sdk = "^0.13.1"
 redis = "^3.3"
 meinheld = "^1.0"
+flask-talisman = "^0.7.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.7"
