--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,9 +22,9 @@ flask-seasurf = "^0.2.2"
 flake8 = "^3.7"
 flake8-builtins = "^1.4"
 flake8-blind-except = "^0.1.1"
-flake8-import-order = "^0.18.1"
 coverage = "^4.5"
 pytest = "^5.2"
+flake8-isort = "^3.0.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
