--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,13 +1,13 @@
 version: 2
 updates:
-- package-ecosystem: pip
-  directory: "/"
-  schedule:
-    interval: daily
-    time: "22:00"
-    timezone: Asia/Jakarta
-  open-pull-requests-limit: 10
-  reviewers:
-  - nhymxu
-  assignees:
-  - nhymxu
+  - package-ecosystem: pip
+    directory: "/"
+    schedule:
+      interval: daily
+      time: "05:00"
+      timezone: Asia/Ho_Chi_Minh
+    open-pull-requests-limit: 10
+    reviewers:
+      - nhymxu
+    assignees:
+      - nhymxu
