--- a/.editorconfig
+++ b/.editorconfig
@@ -13,20 +13,16 @@ charset = utf-8
 # Docstrings and comments use max_line_length = 79
 [*.py]
 max_line_length = 120
-ignore_frosted_errors = E103
-skip = runtests.py,build
-balanced_wrapping = true
-not_skip = __init__.py
 
 # The JSON files contain newlines inconsistently
 [*.json]
 indent_size = 2
-insert_final_newline = ignore
+insert_final_newline = false
 
 # Minified JavaScript files shouldn't be changed
 [**.min.js]
-indent_style = ignore
-insert_final_newline = ignore
+# indent_style = ignore
+insert_final_newline = false
 
 # Makefiles always use tabs for indentation
 [Makefile]
@@ -38,3 +34,6 @@ indent_style = tab
 
 [docs/**.txt]
 max_line_length = 79
+
+[*.{yml,yaml}]
+indent_size = 2
