--- a/.editorconfig
+++ b/.editorconfig
@@ -10,30 +10,21 @@ trim_trailing_whitespace = true
 end_of_line = lf
 charset = utf-8
 
-# Docstrings and comments use max_line_length = 79
 [*.py]
 max_line_length = 120
 
-# The JSON files contain newlines inconsistently
-[*.json]
+[*.{html,css,scss,yml,yaml}]
+indent_size = 2
+
+[{*.json,**.min.js}]
 indent_size = 2
 insert_final_newline = false
 
-# Minified JavaScript files shouldn't be changed
-[**.min.js]
-# indent_style = ignore
-insert_final_newline = false
-
-# Makefiles always use tabs for indentation
 [Makefile]
 indent_style = tab
 
-# Batch files use tabs for indentation
 [*.bat]
 indent_style = tab
 
 [docs/**.txt]
 max_line_length = 79
-
-[*.{yml,yaml}]
-indent_size = 2
