--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ gunicorn = "^21.2.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.3.4"
+pytest = "^8.1.1"
 
 
 [tool.ruff]
@@ -78,6 +79,10 @@ max-line-length = 120
 [tool.pylint.MASTER]
 init-hook="from pylint.config import find_pylintrc; import os, sys; sys.path.append(os.path.dirname(find_pylintrc()))"
 
+[tool.pytest.ini_options]
+testpaths = [
+    "tests",
+]
 
 [build-system]
 requires = ["poetry-core"]
