--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,13 @@ package-mode = false
 [tool.poetry.dependencies]
 python = "^3.12"
 
+uvicorn = {extras = ["standard"], version = "^0.29.0"}
+gunicorn = "^22.0.0"
+
 flask = {extras = ["async", "dotenv"], version= "^3.0.3"}
 python-dotenv = "^1.0.1"
 httpx = "^0.27.0"
-
-uvicorn = {extras = ["standard"], version = "^0.29.0"}
-gunicorn = "^22.0.0"
+stamina = "^24.2.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.1"
