chore: update pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,10 @@
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
 [tool.poetry]
 name = "flask-boilerplate"
-version = "0.1.0"
+dynamic = ["version"]
 description = ""
 authors = ["nhymxu"]
 readme = "README.md"
@@ -85,7 +89,3 @@ init-hook="from pylint.config import find_pylintrc; import os, sys; sys.path.app
 testpaths = [
     "tests",
 ]
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
