--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,38 +1,44 @@
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.poetry]
+[project]
 name = "flask-boilerplate"
+version = "0.0.0"
 description = ""
-authors = ["nhymxu"]
 readme = "README.md"
 package-mode = false
+authors = [{ name = "nhymxu", email = "contact@dungnt.net" }]
+requires-python = "<4.0,>=3.12"
+dependencies = [
+    "uvicorn[standard]<1.0.0,>=0.30.0",
+    "gunicorn<23.0.0,>=22.0.0",
+    "a2wsgi<2.0.0,>=1.10.6",
+    "flask[async,dotenv]<4.0.0,>=3.0.3",
+    "python-dotenv<2.0.0,>=1.0.1",
+    "httpx<1.0.0,>=0.27.0",
+    "stamina<25.0.0,>=24.2.0",
+]
 
-[tool.poetry.dependencies]
-python = "^3.12"
+[dependency-groups]
+dev = [
+    "ruff<1.0.0,>=0.4.3",
+]
+test = [
+    "coverage[toml]<8.0.0,>=7.6.0",
+    "pytest<9.0.0,>=8.2.0",
+    "pytest-asyncio<1.0.0,>=0.23.8",
+    "pytest-cov<6.0.0,>=5.0.0",
+    "pytest-mock<4.0.0,>=3.14.0",
+    "pytest-order<2.0.0,>=1.2.1",
+    "pytest-randomly<4.0.0,>=3.15.0",
+    "time-machine<3.0.0,>=2.14.2",
+]
 
-uvicorn = {extras = ["standard"], version = "^0.30.0"}
-gunicorn = "^22.0.0"
-a2wsgi = "^1.10.6"
-
-flask = {extras = ["async", "dotenv"], version= "^3.0.3"}
-python-dotenv = "^1.0.1"
-httpx = "^0.27.0"
-stamina = "^24.2.0"
-
-[tool.poetry.group.dev.dependencies]
-ruff = "^0.4.3"
-
-[tool.poetry.group.test.dependencies]
-coverage = {extras = ["toml"], version = "^7.6.0"}
-pytest = "^8.2.0"
-pytest-asyncio = "^0.23.8"
-pytest-cov = "^5.0.0"
-pytest-mock = "^3.14.0"
-pytest-order = "^1.2.1"
-pytest-randomly = "^3.15.0"
-time-machine = "^2.14.2"
+[tool.uv]
+# Disable automatic locking and syncing of the project
+#managed = false
+package = false
+default-groups = [
+#    "dev",
+#    "test",
+]
 
 [tool.ruff]
 exclude = [
